[gd_scene load_steps=4 format=3 uid="uid://durccheqs6y0n"]

[ext_resource type="Script" uid="uid://jbmf62wdvkmk" path="res://scripts/objects/bullet.gd" id="1_r481e"]
[ext_resource type="Texture2D" uid="uid://8rellgmbb7bb" path="res://assets/objects/shot.png" id="2_qge6c"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mkf8s"]
radius = 3.0
height = 14.0

[node name="Bullet" type="Area2D" groups=["bullets"]]
z_index = -1
scale = Vector2(2, 2)
collision_layer = 8
collision_mask = 37
script = ExtResource("1_r481e")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(6.5, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_qge6c")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(7, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_mkf8s")
debug_color = Color(0.823529, 0.196078, 0.196078, 0.419608)

[node name="Tip" type="Marker2D" parent="."]
position = Vector2(8, 0)
gizmo_extents = 8.0

[node name="VisibleOnScreenNotifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.5, 0)
scale = Vector2(0.05, 0.05)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier" to="." method="_on_screen_exited"]
